Fixed login issue overflow

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -58,6 +58,7 @@ html:root
 
 body, html
   min-height: 100vh
+  overflow-x: hidden
 
 body
   display: grid
